fix: add self-serve free api keys
